# gensor

./: .gitattributes  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  Makefile.dev  README.md  index.html  mkdocs.yml  mypy.dev.ini  objects.inv  pyproject.toml  sitemap.xml  tox.ini
.devcontainer/: devcontainer.json  postCreateCommand.sh
.github/workflows/: create-github-release.yml  deploy-docs.yml  main.yml  on-release-main.yml  quality-control.yml  release-deploy-to-pypi.yml  release-to-pypi-deploy-docs.yml  validate-codecov-config.yml
docs/: index.md  modules.md  quickstart.md  supported-sensor-formats.md
docs/notebooks/: 000-basic-usage.ipynb  000-basic_usage.ipynb  001-transformation-and-outliers.ipynb  002-sqlite-integration.ipynb  002-transformation-and-outliers.ipynb  003-advanced-plotting.ipynb  basic_usage.ipynb  index.md
gensor/: __init__.py  compensation.py  config.py  dtypes.py  exceptions.py  getters.py  log.py  preprocessing.py  smoothing.py  trend.py
gensor/.data/: PB01A_moni_AV319_220427183019_AV319.CSV
gensor/analysis/: outliers.py  stats.py  trend.py
gensor/core/: base.py  dataset.py  indexer.py  timeseries.py
gensor/data/: Barodiver_220427183008_BY222.csv  __init__.py
gensor/db/: __init__.py  connection.py
gensor/io/: getters.py  read.py
gensor/parse/: __init__.py  plain.py  utils.py  vanessen.py
gensor/processing/: compensation.py  smoothing.py  transform.py
gensor/testdata/: PB01A_moni_AV319_220427183019_AV319.csv  PB02A_plain.csv  __init__.py
modules/: index.html
notebooks/: 000-basic_usage.ipynb  001-sqlite-integration.ipynb  003-working-with-datasets.ipynb  index.html
notebooks/000-basic-usage/: index.html
notebooks/000-basic_usage/: index.html
notebooks/001-transformation-and-outliers/: index.html
notebooks/002-sqlite-integration/: index.html
notebooks/003-advanced-plotting/: index.html
quickstart/: index.html
search/: search_index.json
supported-sensor-formats/: index.html
tests/: conftest.py  test_compensation.py  test_dataset.py  test_db.py  test_foo.py  test_outliers.py  test_parser_robustness.py  test_parsing.py  test_plotting.py  test_timeseries.py  test_transformation.py
tests/.data/: BY222_Barodiver_TEST.CSV  temperature_data_with_time.csv  temperature_data_with_time_other.csv  temperature_data_without_time.csv
